# ft8lib

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: decode.md  encode.md  usage.md
src/ft8lib/: __init__.py  _ckernels.c  _kernels.py  _tables.py  cli.py  crc.py  decode.py  encode.py  ldpc.py  pack.py  protocol.py  realtime.py  subtract.py  wspr.py  wspr_pack.py
tests/: test_crc_ldpc.py  test_endtoend.py  test_pack.py  test_realtime.py  test_wspr.py
tools/: gen_tables.py  measure_decode_threshold.py  profile_decode.py
